Cambios en los estilos de la página de registro

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -161,3 +161,9 @@
 body {
   font-family: 'Questrial';
 }
+
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
